<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".staff.StaffActivity">

    <RelativeLayout
        android:id="@+id/staff_top_actionbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark">


        <ImageView
            android:id="@+id/staff_name"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/staffs_name"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/staff_back"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_background"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:focusable="true"
            android:padding="15dp"
            android:src="@drawable/back_icon" />

        <ImageView
            android:id="@+id/staff_search"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_background"
            android:clickable="true"
            android:contentDescription="@string/search"
            android:focusable="true"
            android:padding="15dp"
            android:src="@drawable/icon_search" />


        <EditText
            android:id="@+id/staff_search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="55dp"
            android:layout_marginStart="55dp"
            android:drawableEnd="@drawable/ic_action_close"
            android:hint="@string/search_here"
            android:inputType="text"
            android:textColor="@color/white"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/staff_bottom_actionbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/icon_background"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:contentDescription="@string/add_new_item"
            android:padding="11dp"
            android:src="@drawable/icon_add_new" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/staff_bottom_actionbar"
        android:layout_below="@+id/staff_top_actionbar"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/staff_frame_search_id"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="2dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/staff_name_filter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/staff_id_filter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/id_"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/staff_username_filter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/username"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/staff_client_filter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/client"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/staff_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:text="@string/empty_here"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#757575"
                android:textStyle="bold" />
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/staff_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
</RelativeLayout>